# marvin

./: .gitignore  LEVEL_EDITOR_ARCHITECTURE.md  MARVIN_API_SPEC.md  MARVIN_API_SPEC.md.bak  MARVIN_DESIGN.md  MARVIN_SPEC.md  README.md  REFERENCE.md  SHARP_EDGES.md  TOOLS.md  app.py  curses_ui.py  marvin.txt  ncpure-web-architecture.md  package-lock.json  package.json  pipeline_prompt_v1.txt  pipeline_prompt_v2.txt  pipeline_prompt_v3.txt  requirements.txt  resume.sh  tsconfig.json
.tickets/: cat-0ben.md  cat-0cdm.md  cat-0mw9.md  cat-0o8n.md  cat-14rs.md  cat-1cmf.md  cat-1s2o.md  cat-23c4.md  cat-27jv.md  cat-2c8k.md  cat-2qaq.md  cat-32jc.md  cat-3n5i.md  cat-3rb8.md  cat-3y6u.md  cat-48n7.md  cat-62j9.md  cat-7d4l.md  cat-7gpz.md  cat-8mb1.md  cat-8smb.md  cat-9bms.md  cat-9nb0.md  cat-ap5g.md  cat-b1gn.md  cat-b64z.md  cat-bf98.md  cat-bw04.md  cat-bwl7.md  cat-bytu.md  cat-eg9c.md  cat-f34a.md  cat-fc8y.md  cat-fuwa.md  cat-gycz.md  cat-izhw.md  cat-jike.md  cat-k4mc.md  cat-k4vo.md  cat-kjih.md  (+33 more)
marvin-nodejs/: package.json  tsconfig.json
marvin-nodejs/src/: cli.ts  types.ts
marvin-ts/: .gitignore  REFACTOR_PLAN.md  package-lock.json  package.json  tsconfig.json
marvin-ts/.marvin/: code-review-report.md  design.md  spec.md  ux.md
marvin-ts/.tickets/: mt-03l5.md  mt-0fy0.md  mt-33kf.md  mt-5e54.md  mt-5suc.md  mt-7sbq.md  mt-96ml.md  mt-cu7l.md  mt-dwtc.md  (+25 more)
ncpure-web/: Cargo.toml
ncpure-web/src/: api.rs  main.rs  state.rs  ws.rs
ncpure-web/static/: index.html
src/: app.ts
test/: contract.test.ts  smoke.test.js  smoke.test.ts  tool_registry.test.ts
(+194 files in other folders)
